force-app/main/default/objects/ccrz__E_PageSection__c/ccrz__E_PageSection__c.object-meta.xml
<CustomObject>
    <description>Holds the page sections - entities which comprise a page in the application.</description>
    <label>CC Page Section</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Page Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>