force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayType__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tab</fullName>
            </value>
            <value>
                <fullName>Widget</fullName>
            </value>
            <value>
                <fullName>Scroller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>