force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__Grouping__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Grouping__c</fullName>
    <description>If a tab, all sections with the same group will be in the same tab group.</description>
    <label>Grouping</label>
    <length>25</length>
    <type>Text</type>
</CustomField>