force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__Location__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Column</fullName>
            </value>
            <value>
                <fullName>Main Content</fullName>
            </value>
            <value>
                <fullName>Right Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>