force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__PageSectionId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageSectionId__c</fullName>
    <externalId>true</externalId>
    <label>PageSectionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>