force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__SectionFilter__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SectionFilter__c</fullName>
    <label>Section Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>ccrz__SectionName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Assembly Guides</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>CrossSell</fullName>
            </value>
            <value>
                <fullName>Datasheets</fullName>
            </value>
            <value>
                <fullName>Flash Files</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Owner&apos;s Manuals</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Safety Documents</fullName>
            </value>
            <value>
                <fullName>Sales Brochures</fullName>
            </value>
            <value>
                <fullName>UpSell</fullName>
            </value>
            <value>
                <fullName>Complementary</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Specification Sheets</fullName>
            </value>
            <value>
                <fullName>Product Bulletins</fullName>
            </value>
            <value>
                <fullName>Operating Manuals</fullName>
            </value>
            <value>
                <fullName>SDS Documents</fullName>
            </value>
            <value>
                <fullName>Label 1s</fullName>
            </value>
            <value>
                <fullName>Analytical Procedures</fullName>
            </value>
            <value>
                <fullName>Label 2s</fullName>
            </value>
            <value>
                <fullName>Catalog Sheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>