force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__SectionFilterOther__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SectionFilterOther__c</fullName>
    <label>Section Filter Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>