force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__SectionName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SectionName__c</fullName>
    <label>Section Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ccrz__PageName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Guides</fullName>
            </value>
            <value>
                <fullName>GuidesSelected</fullName>
            </value>
            <value>
                <fullName>IncludedItems</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
            <value>
                <fullName>Sellers</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Specs-All</fullName>
            </value>
            <value>
                <fullName>Specs-Single</fullName>
            </value>
            <value>
                <fullName>Tiers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>