force-app/main/default/objects/ccrz__E_PageSection__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>Storefront name. A storefront named &quot;Global&quot; applies to all store fronts. The B2B Commerce first returns records with matched storefront name, and pageName. If no match found, return records with storefront named &quot;Global&quot; and matched pageName.</description>
    <externalId>true</externalId>
    <label>Storefront</label>
    <length>50</length>
    <type>Text</type>
</CustomField>