force-app/main/default/objects/ccrz__E_PageSection__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__DisplayStyle__c</columns>
    <columns>ccrz__DisplayType__c</columns>
    <columns>ccrz__Grouping__c</columns>
    <columns>ccrz__Location__c</columns>
    <columns>ccrz__SectionName__c</columns>
    <columns>ccrz__SectionFilter__c</columns>
    <columns>ccrz__SectionFilterOther__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>